# bazel_quickstart

./: .bazelrc  .gitignore  .rustfmt.toml  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  WORKSPACE.bazel
.github/workflows/: ci.yaml
rust_example/api/: BUILD.bazel  lib.rs  model.rs
rust_example/cmd/: BUILD.bazel  demo_server.rs
rust_example/macros/: BUILD.bazel  lib.rs
tools/rust/: defs.bzl
tools/settings/: BUILD.bazel
