load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@rules_multirun//:defs.bzl", "multirun")

exports_files([
    ".clippy.toml",
    ".rustfmt.toml",
])

buildifier(
    name = "buildfmt",
    lint_mode = "fix",
)

buildifier(
    name = "buildfmt.check",
    lint_mode = "warn",
    mode = "diff",
)

alias(
    name = "rustfmt",
    actual = "@rules_rust//tools/rustfmt:target_aware_rustfmt",
    visibility = ["//visibility:public"],
)

multirun(
    name = "fmt",
    commands = [
        ":buildfmt",
        ":rustfmt",
    ],
)

alias(
    name = "gen_rust_project",
    actual = "@rules_rust//tools/rust_analyzer:gen_rust_project",
    tags = ["manual"],
)
