[workspace]
[package]
name = "all_crate_deps"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "dummy.rs"

[dependencies]
anyhow = "1"
axum = { version = "0", features = ["macros", "multipart", "ws"] }
chrono = { version = "0", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
proc-macro2 = { version = "1" }
quote = { version = "1" }
rstest = { version = "0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0", features = ["attributes"] }
tracing-subscriber = { version = "0", features = ["env-filter", "fmt"] }