module(
    name = "bazel_quickstart",
)

bazel_dep(
    name = "platforms",
    version = "0.0.11",
)
bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)
bazel_dep(
    name = "rules_shell",
    version = "0.4.0",
)
bazel_dep(
    name = "rules_multirun",
    version = "0.11.0",
)

bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.0.3",
    dev_dependency = True,
)

###############################################################################
# C++
###############################################################################
bazel_dep(name = "toolchains_llvm", version = "1.4.0")

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_versions = {
        "": "20.1.1",
        # 15.0.7 is the last version that publishes a darwin-x86_64 toolchain.
        "darwin-x86_64": "15.0.7",
    },
)
use_repo(llvm, "llvm_toolchain")
use_repo(llvm, "llvm_toolchain_llvm")

register_toolchains("@llvm_toolchain//:all")

###############################################################################
# Rust
###############################################################################
bazel_dep(name = "rules_rust", version = "0.57.1")

# Rust toolchain
RUST_EDITION = "2021"

RUST_VERSION = "1.86.0"

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = RUST_EDITION,
    versions = [RUST_VERSION],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension(
    "@rules_rust//crate_universe:extensions.bzl",
    "crate",
)
crate.from_cargo(
    name = "crates_io",
    cargo_lockfile = "//:Cargo.lock",
    isolated = False,
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates_io")
