load("//tools/rust:defs.bzl", "rust_binary")

# An alias to make it easier to run the binary with `bazel run //rust_example/cmd`.
alias(
    name = "cmd",
    actual = ":demo_server",
)

rust_binary(
    name = "demo_server",
    proc_macro_deps = [
        "//rust_example/macros",
    ],
    deps = [
        "//rust_example/api",
        "@crates_io//:anyhow",
        "@crates_io//:axum",
        "@crates_io//:chrono",
        "@crates_io//:clap",
        "@crates_io//:tokio",
        "@crates_io//:tracing",
        "@crates_io//:tracing-subscriber",
    ],
)
